--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "redux": "^3.5.2",
     "redux-thunk": "^2.1.0",
     "sanitize-html": "^1.11.4",
-    "cookie-parser": "^1.4.0"
+    "cookie-parser": "^1.4.0",
+    "bigrandom": "^1.1.3"
   },
   "devDependencies": {
     "ava": "^0.15.2",
