--- a/package.json
+++ b/package.json
@@ -32,8 +32,11 @@
   "license": "MIT",
   "dependencies": {
     "babel-core": "^6.9.1",
+    "bigrandom": "^1.1.3",
     "body-parser": "^1.15.1",
+    "bootstrap": "^3.3.7",
     "compression": "^1.6.2",
+    "cookie-parser": "^1.4.0",
     "cross-env": "^1.0.8",
     "cuid": "^1.3.8",
     "express": "^4.13.4",
@@ -43,6 +46,7 @@
     "limax": "^1.3.0",
     "mongoose": "^4.4.20",
     "react": "^15.1.0",
+    "react-bootstrap": "^0.31.3",
     "react-dom": "^15.1.0",
     "react-helmet": "^3.1.0",
     "react-intl": "^2.1.2",
@@ -50,9 +54,7 @@
     "react-router": "^2.4.1",
     "redux": "^3.5.2",
     "redux-thunk": "^2.1.0",
-    "sanitize-html": "^1.11.4",
-    "cookie-parser": "^1.4.0",
-    "bigrandom": "^1.1.3"
+    "sanitize-html": "^1.11.4"
   },
   "devDependencies": {
     "ava": "^0.15.2",
