--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "watch:test": "npm run test -- --watch",
     "cover": "nyc npm run test",
     "check-coverage": "nyc check-coverage --statements 100 --branches 100 --functions 100 --lines 100",
-    "start": "cross-env NODE_ENV=production MONGO_URL=mongodb://swe4103:group1@ds149134.mlab.com:49134/swe4103 node index.js",
+    "start": "cross-env NODE_ENV=development MONGO_URL=mongodb://swe4103:group1@ds149134.mlab.com:49134/swe4103 node index.js",
     "start:prod": "cross-env NODE_ENV=production node index.js",
     "bs": "npm run clean && npm run build && npm run build:server && npm run start:prod",
     "build": "cross-env NODE_ENV=production webpack --config webpack.config.prod.js",
@@ -54,7 +54,6 @@
     "react-router": "^2.4.1",
     "redux": "^3.5.2",
     "redux-thunk": "^2.1.0",
-<<<<<<< HEAD
     "sanitize-html": "^1.11.4",
     "cookie-parser": "^1.4.0",
     "bigrandom": "^1.1.3",
@@ -115,10 +114,9 @@
     "webpack-dev-server": "^2.1.0-beta.0",
     "webpack-externals-plugin": "^1.0.0",
     "webpack-hot-middleware": "^2.10.0",
-    "webpack-manifest-plugin": "^1.0.1"
-=======
+    "webpack-manifest-plugin": "^1.0.1",
     "sanitize-html": "^1.11.4"
->>>>>>> 69717b3052580755ae74668973d7296ea0405612
+
   },
   "devDependencies": {
     "ava": "^0.15.2",
