--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "mongoose": "^4.4.20",
     "nock": "^8.0.0",
     "node-mailer": "^0.1.1",
+    "nodemailer": "^0.7.1",
     "nodemon": "^1.9.2",
     "null-loader": "^0.1.1",
     "nyc": "^6.4.4",
