--- a/package.json
+++ b/package.json
@@ -110,7 +110,8 @@
     "webpack-dev-server": "^2.1.0-beta.0",
     "webpack-externals-plugin": "^1.0.0",
     "webpack-hot-middleware": "^2.10.0",
-    "webpack-manifest-plugin": "^1.0.1"
+    "webpack-manifest-plugin": "^1.0.1",
+    "asyncawait": "^1.0.6"
   },
   "devDependencies": {
     "ava": "^0.15.2",
