--- a/apidoc/api_project.json
+++ b/apidoc/api_project.json
@@ -1,7 +1,7 @@
 {
   "name": "Attendance tracker API documentation",
   "version": "0.1.0",
-  "description": "Fulfilling all of your deepest API desires",
+  "description": "Better than Google Docs!",
   "title": "API docs",
   "url": "http://127.0.0.1:8000/api/",
   "sampleUrl": false,
@@ -9,7 +9,7 @@
   "apidoc": "0.3.0",
   "generator": {
     "name": "apidoc",
-    "time": "2017-11-13T18:40:22.783Z",
+    "time": "2017-11-14T14:32:49.394Z",
     "url": "http://apidocjs.com",
     "version": "0.17.6"
   }
