--- a/package.json
+++ b/package.json
@@ -16,9 +16,7 @@
     "slate": "rimraf node_modules && npm install",
     "lint": "eslint client server"
   },
-  "pre-commit": [
-
-  ],
+  "pre-commit": [],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Hashnode/mern-starter.git"
@@ -70,6 +68,7 @@
     "intl": "^1.2.4",
     "intl-locales-supported": "^1.0.0",
     "isomorphic-fetch": "^2.2.1",
+    "jquery": "^3.2.1",
     "jsdom": "^9.2.1",
     "json-loader": "^0.5.4",
     "limax": "^1.3.0",
@@ -91,6 +90,7 @@
     "react-addons-test-utils": "^15.1.0",
     "react-bootstrap": "^0.31.3",
     "react-bootstrap-sidebar": "0.0.1",
+    "react-confirm-alert": "^1.0.8",
     "react-dom": "^15.1.0",
     "react-helmet": "^3.1.0",
     "react-hot-loader": "^3.0.0-beta.2",
