--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "watch:test": "npm run test -- --watch",
     "cover": "nyc npm run test",
     "check-coverage": "nyc check-coverage --statements 100 --branches 100 --functions 100 --lines 100",
-    "start": "cross-env NODE_ENV=development MONGO_URL=mongodb://swe4103:group1@ds149134.mlab.com:49134/swe4103 node index.js",
+    "start": "cross-env NODE_ENV=development MONGO_URL=mongodb://swe4103:swe4103@ds115436.mlab.com:15436/swe4103-2 node index.js",
     "start:prod": "cross-env NODE_ENV=production node index.js",
     "bs": "npm run clean && npm run build && npm run build:server && npm run start:prod",
     "build": "cross-env NODE_ENV=production webpack --config webpack.config.prod.js",
