--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "isomorphic-fetch": "^2.2.1",
     "jsdom": "^9.2.1",
     "json-loader": "^0.5.4",
+    "json2csv": "^3.11.5",
     "limax": "^1.3.0",
     "mock-css-modules": "^1.0.0",
     "mockgoose": "^6.0.3",
